--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "snakes-ladders",
   "version": "0.0.1",
   "description": "The famous snakes and ladders game",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "",
-    "start": "",
-    "watch": ""
+    "clean": "rimraf ./build && tsc",
+    "prestart": "pnpm run clean",
+    "start": "node ./build",
+    "watch": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,12 @@
   "bugs": {
     "url": "https://github.com/markonikolas/snakes-ladders/issues"
   },
-  "homepage": "https://github.com/markonikolas/snakes-ladders#readme"
+  "homepage": "https://github.com/markonikolas/snakes-ladders#readme",
+  "devDependencies": {
+    "@types/node": "^18.11.19",
+    "nodemon": "^2.0.20",
+    "rimraf": "^4.1.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
+  }
 }
