--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "The famous snakes and ladders game",
   "main": "dist/index.js",
   "scripts": {
-    "clean": "rimraf ./build && tsc",
-    "prestart": "pnpm run clean",
-    "start": "node ./build",
-    "watch": "nodemon"
+    "build": "tsc",
+    "start": "node ./dist",
+    "watch": "nodemon -L"
   },
   "repository": {
     "type": "git",
@@ -27,7 +26,6 @@
   "devDependencies": {
     "@types/node": "^18.11.19",
     "nodemon": "^2.0.20",
-    "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
