--- a/package.json
+++ b/package.json
@@ -1,36 +1,27 @@
 {
   "name": "snakes-ladders",
-  "version": "0.0.1",
-  "description": "The famous snakes and ladders game",
-  "main": "dist/index.js",
+  "version": "0.0.0",
+  "private": true,
+  "main": "./src/bin/www",
   "scripts": {
-    "build": "tsc",
-    "start": "node ./dist",
-    "watch": "nodemon -L"
+    "start": "nodemon"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/markonikolas/snakes-ladders.git"
+  "dependencies": {
+    "express": "~4.16.1",
+    "pug": "2.0.0-beta11"
   },
-  "keywords": [
-    "typescript",
-    "node",
-    "oop"
-  ],
-  "author": "Marko Nikolaš",
-  "license": "GPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/markonikolas/snakes-ladders/issues"
-  },
-  "homepage": "https://github.com/markonikolas/snakes-ladders#readme",
   "devDependencies": {
-    "@types/node": "^18.11.19",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/express": "^4.17.17",
+    "@types/http-errors": "^2.0.1",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^18.13.0",
+    "cookie-parser": "~1.4.6",
+    "debug": "~2.6.9",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
-  },
-  "dependencies": {
-    "@types/express": "^4.17.17",
-    "express": "^4.18.2"
   }
 }
