--- a/package.json
+++ b/package.json
@@ -1,27 +1,15 @@
 {
   "name": "snakes-ladders",
-  "version": "0.0.0",
-  "private": true,
-  "main": "./src/bin/www",
+  "private": false,
+  "version": "0.0.1",
+  "type": "module",
   "scripts": {
-    "start": "nodemon"
-  },
-  "dependencies": {
-    "express": "~4.16.1",
-    "pug": "2.0.0-beta11"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.3",
-    "@types/express": "^4.17.17",
-    "@types/http-errors": "^2.0.1",
-    "@types/morgan": "^1.9.4",
-    "@types/node": "^18.13.0",
-    "cookie-parser": "~1.4.6",
-    "debug": "~2.6.9",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.3",
+    "vite": "^4.1.0"
   }
 }
